# laue-analysis

./: .gitignore  MANIFEST.in  README.md  compile_bins.sh  dev_rebuild.sh  environment.yml  pyLaueGo.ipynb  pyLaueGo.py  pyproject.toml  requirements.txt  setup.py  torch_reconstruct_cli.py
.github/workflows/: python-tests.yml
archive_recon/: README.md
examples/: gpu_reconstruction_example.py
laue_indexing/: pyLaueGo.py
laueanalysis/: mpi_runner.py  pyLaueGo.py  xmlWriter.py
laueanalysis/lau_dataclasses/: config.py  detector.py  indexing.py  pattern.py  step.py  xtl.py
laueindexing/: mpi_runner.py  pyLaueGo.py
laueindexing/config/: defaults.yml  defaults_34ide.yml  geoN_2023-04-06_03-07-11.xml
laueindexing/dataclasses/: atom.py  detector.py  hkls.py  indexing.py  pattern.py  step.py  xtl.py
laueindexing/lau_dataclasses/: config.py  detector.py  indexing.py  pattern.py  peaksXY.py  recipLattice.py  roi.py  step.py  xtl.py
pipeline/: pyLaueGo.py
pipeline/config/: defaults.yml  defaults_34ide.yml
pipeline/dataclasses/: atom.py  detector.py  hkls.py  indexing.py  pattern.py  peaksXY.py  recipLattice.py  roi.py  step.py  xtl.py
src/laueanalysis/: __init__.py  bins.py
tests/: test_bins.py  test_dataclasses.py  test_depth_override.py  test_index_functional.py  test_index_smoke.py  test_index_unit.py  test_pylauego.py  test_reconstruct.py  test_reconstruct_hdf5_libs.py  test_smoke.py  test_wirescan_interface.py  test_xml_generation.py  test_xmlwriter.py
tests/data/: test_config.yaml
tests/perf_testing/: README.md  plot_cpu_heatmap.py  run_perf.py
(+95 files in other folders)
