[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laueanalysis"
version = "0.1.0"
description = "A package for Laue diffraction analysis including indexing and reconstruction"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "linked-liszt", email = "anoxymoren@gmail.com"},  # Update with actual info
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]

dependencies = [
    "numpy>=1.20.0",
    "pyyaml>=5.4",
]

[project.urls]
Repository = "https://github.com/Linked-Liszt/laue-analysis"

[project.optional-dependencies]
mpi = ["mpi4py>=3.0.0"]
test = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["laueanalysis*"]

[tool.setuptools.package-data]
"laueanalysis.indexing" = ["bin/*"]
"laueanalysis.reconstruct" = ["bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests that require compiled executables (deselect with '-m \"not integration\"')",
]
